footer and home page succesfully completed

--- a/ngo-react/src/Components/Home/HomeSection6/homeSec6.css
+++ b/ngo-react/src/Components/Home/HomeSection6/homeSec6.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
+
 .home6::before {
     content: "";
     position: absolute;
