--- a/ngo-react/src/Components/Home/HomeSection3/homeSec3.css
+++ b/ngo-react/src/Components/Home/HomeSection3/homeSec3.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
+
 .homeSec3 {
     background: var(--yellow-light, #FCEDC6);
     padding-bottom: 80px;
