--- a/ngo-react/src/Components/Home/HomeSection4/homeSec4.css
+++ b/ngo-react/src/Components/Home/HomeSection4/homeSec4.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
+
 .home4 {
     display: flex;
     flex-direction: column;
